chore: add husky pre-commit check gate

--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "openclaw": ">=2026.2.17"
   },
   "devDependencies": {
+    "husky": "^9.1.7",
     "openclaw": "^2026.2.17",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
   "scripts": {
+    "prepare": "husky",
     "test": "vitest run --passWithNoTests",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "check": "pnpm run typecheck && pnpm test"
   },
   "openclaw": {
     "channel": {
