--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "openclaw": ">=2026.2.17"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.4.2",
+    "@commitlint/config-conventional": "^20.4.2",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.1.7",
     "openclaw": "^2026.2.17",
+    "release-please": "^17.3.0",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
@@ -33,7 +38,9 @@
     "prepare": "husky",
     "test": "vitest run --passWithNoTests",
     "typecheck": "tsc --noEmit",
-    "check": "pnpm run typecheck && pnpm test"
+    "check": "pnpm run typecheck && pnpm test",
+    "commit": "cz",
+    "commit:check": "commitlint --edit"
   },
   "openclaw": {
     "channel": {
@@ -67,5 +74,10 @@
     "plugin",
     "fluxer",
     "bot"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  }
 }
